change the title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-   <title>first task</title> 
+   <title>Odd or Event Test</title> 
    <script src=./third.js></script>
 </head>    
 <body>
