edit some mistakes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 
 <html>
 <head>
    <title>Odd or Event Test</title> 
-   <script src=./third.js></script>
+   <script src="./third.js"></script>
 </head>    
 <body>
     
