--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
    <title>Odd or Event Test</title> 
-   <script src="./third.js"></script>
+   <script src="./odd_or_even.js"></script>
 </head>    
 <body>
     
